chrome layout bugfix

--- a/styles/SubmissionsTable.module.scss
+++ b/styles/SubmissionsTable.module.scss
@@ -22,6 +22,8 @@
 
 .row {
   position: relative;
+  // force chrome to respect position: relative on table row
+  transform: scale(1);
 
   a {
     position: relative;
